# VUT_IMS_23

./: CMakeLists.txt  Makefile  README.md  arg_parse.cpp  arg_parse.h  doprava  main.cpp  out
Classes/: Accident.cpp  Accident.h  Bus.cpp  Bus.h  BusStop.cpp  BusStop.h  FirstBusStop.cpp  FirstBusStop.h  SecondBusStop.cpp  SecondBusStop.h
Documentation/: documentation.aux  documentation.tex
Documentation/New-Docs-Style/: documentation.aux  documentation.bbl  documentation.bib  documentation.blg  documentation.out  documentation.tex  documentation.tex.recover.bak~
Documentation/New-Docs-Style/fig/: petri.drawio
Documentation_final_version/: Makefile  documentation.aux  documentation.bbl  documentation.bib  documentation.blg  documentation.tex
